# f_x_dev

./: .editorconfig  .gitignore  .gitmodules  README.md  WORKSPACE  elm.json  package.json  stackage_snapshot.json
.devcontainer/: Dockerfile  devcontainer.json
projects/blog/: BUILD.bazel  variables.bzl
projects/blog/browser/: BUILD.bazel
projects/blog/browser/src/: About.elm  Article.elm  Commands.elm  Components.elm  Consts.elm  Contacts.elm  Decoders.elm  Home.elm  Init.elm  Main.elm  MarkdownRenderer.elm  Model.elm  Msg.elm  Route.elm  Subscriptions.elm  Ui.elm  Update.elm  UrlChangeHandlers.elm  View.elm
projects/blog/k8s/: deployment.yaml  ingress.yaml  issuer.yaml  service.yaml
projects/blog/nginx/: nginx.conf
projects/blog/nginx/html/: index.html
projects/blog/nginx/html/assets/css/: article.css
projects/blog/nginx/html/assets/js/: prism.js
projects/blog/server/: BUILD.bazel  README.md  deployment.yaml
projects/blog/server/articles/: a-private-article-01.md  all-strings-typescript-types-mapping.md  article-preview-list.json  dev-containers-01.md  ngx-remotedata-typing-01.md  pattern-matching-in-python-01.md  russian-managed-k8s-01.md
projects/blog/server/assets/: prism.css
projects/blog/server/k8s/: deployment.yaml  service.yaml
projects/blog/server/src/: About.hs  Article.hs  ArticlePreview.hs  Consts.hs  Contacts.hs  CustomAttributes.hs  Home.hs  Main.hs  WrapHtmlContent.hs
secrets/: .gitignore  BUILD.bazel
